Scrollbar issue resoloved. Website ready for auth

--- a/css/style.css
+++ b/css/style.css
@@ -38,22 +38,22 @@ body{
 
 .btn-primary {
   margin-left: 5px;
-  background-color: white;
-  color: skyblue;
-	border-color: skyblue;
+  background-color: transparent;
+  color: white;
+	border-color: white;
 	margin-bottom: 5px;
 }
 
 .btn-primary:hover {
-	color: white;
-	background-color: skyblue;
+	color: skyblue;
+	background-color: white;
 	border-color: #eee;
 }
 
 .jumbotron {
   margin: 0;
-  margin-bottom: 50px;
-  padding: 5% 0 10% 0;
+  margin-bottom: 8%;
+  padding: 5% 0 0 0;
   background-color: transparent;
 
 }
@@ -63,14 +63,17 @@ body{
 }
 
 .jumbotron p{
-  font-weight: 200;
+  font-weight: 400;
 }
 
 .form-inline {
-  position: absolute;
-  display: none;
+  position: relative;
+  display: inline-flex;
 }
 
+.form-control {
+  width: 500px;
+}
 .call-to-action {
 	text-align: center;
 }
@@ -86,9 +89,12 @@ body{
   margin-bottom: 2%;
 }
 
-@media screen and (min-width: 768px) {
-  .form-inline {
-    position: relative;
-    display: inline-flex;
-  }
+.divider {
+  height: 1px;
+  margin-left: 10%;
+  margin-bottom: 2%;
+  width:80%;
+  display:block; /* for use on default inline elements like span */
+  overflow: hidden;
+  background-color: #dddddd87;
 }
